@@ -1,3 +1,8 @@
+2012-12-25 belangeo <belangeo@gmail.com>
+
+    * Added new object: Delay1. Delays a signal by one sample.
+    - rev 1058
+
 2012-12-19 belangeo <belangeo@gmail.com>
 
     * Added new objects: Min and Max. Outputs minimum or maximum between two values.
